scrollbar fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,152 +1,155 @@
 body {
-  background-image: url("../images/giftly.png");
-  background-repeat: repeat;
-  font-family: 'Amatic SC', cursive;
-  font-size: 25px;
-  letter-spacing: 1px;
+ background-image: url("../images/giftly.png");
+ background-repeat: repeat;
+ font-family: 'Amatic SC', cursive;
+ font-size: 25px;
+ letter-spacing: 1px;
 }
 
 #top {
-  width: 100%;
-  padding-left: 49px;
-  padding-right: 49px;
-  padding-bottom: 10px;
-  background-image: url("../images/giftly.png");
-  background-repeat: repeat;
-  top: 0;
+ width: 100%;
+ padding-left: 49px;
+ padding-right: 49px;
+ padding-bottom: 10px;
+ background-image: url("../images/giftly.png");
+ background-repeat: repeat;
+ top: 0;
 }
 
 #clickSearch h4 {
-  margin-left: -15px;
+ margin-left: -15px;
 }
 
 h4 {
-  font-size: 30px;
+ font-size: 30px;
 }
 
 .form-control {
-  font-size: 23px;
+ font-size: 23px;
 }
 
 #animal-form {
-    margin-top: 15px;
-    z-index: -1;
+   margin-top: 15px;
+   z-index: -1;
 }
 
 #clickText {
-  position: relative;
-  height: 153px;
-  vertical-align: bottom;
+ position: relative;
+ height: 153px;
+ vertical-align: bottom;
 }
 
 #clickText h4{
-  position: absolute;
-  bottom: 0;
+ position: absolute;
+ bottom: 0;
 }
 
 #blank {
-  padding: 0;
+ padding: 0;
 }
 
 .btn {
-  margin-right: 7.5px;
-  margin-top: 7.5px;
-  margin-bottom: 7.5px;
-  background-color: #e97735;
-  color: white;
-  font-size: 20px;
+ margin-right: 7.5px;
+ margin-top: 7.5px;
+ margin-bottom: 7.5px;
+ background-color: #e97735;
+ color: white;
+ font-size: 20px;
 }
 
 .btn-default:hover{
-  color: white;
-  background-color: #00919e;
+ color: white;
+ background-color: #00919e;
 }
 
 .btn-default:focus{
-  color: white;
-  background-color: #00919e;
+ color: white;
+ background-color: #00919e;
 }
 
 .btn-default:active:focus{
-  color: black;
-  background-color: yellow ;
+ color: black;
+ background-color: yellow ;
 }
 
 #gifs {
-  margin-bottom: 40px;
-  margin-left: 35px;
+ margin-bottom: 40px;
+ margin-left: 35px;
 }
 
 .gif {
-  display: inline-block;
-  margin-right: 20px;
-  margin-top: 20px;
+ display: inline-block;
+ margin-right: 20px;
+ margin-top: 20px;
 }
 
 .loadBtn:hover{
-  color: white;
-  background-color: #00919e;
-  margin-right: 5px;
-  display: flex;
-  justify-content: center;
+ color: white;
+ background-color: #00919e;
+ margin-right: 5px;
+ display: flex;
+ justify-content: center;
 }
 
 #loadBtn:focus {
-  background-color: #e97735;
-  color: white;
-  display: flex;
-  justify-content: center;
-  outline : none;
-  margin-right: 5px;
+ background-color: #e97735;
+ color: white;
+ display: flex;
+ justify-content: center;
+ outline : none;
+ margin-right: 5px;
 }
 
 #loadBtn:active:focus {
-  color: black;
-  background-color: yellow ;
-  margin-right: 5px;
-  display: flex;
-  justify-content: center;
+ color: black;
+ background-color: yellow ;
+ margin-right: 5px;
+ display: flex;
+ justify-content: center;
 }
 
 #loadMore button {
-  width: 115px;
-  text-align: center;
+ width: 115px;
+ text-align: center;
 }
 
 #loadMore {
-  display: flex;
-  justify-content: center;
+ display: flex;
+ justify-content: center;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+ position: relative;
+ min-height: 100%;
 }
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+ /* Margin bottom by footer height */
+ margin-bottom: 60px;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  text-align: center;
-  font-size: 20px;
-  vertical-align: bottom;
+ position: absolute;
+ bottom: 0;
+ width: 100%;
+ /* Set the fixed height of the footer here */
+ text-align: center;
+ font-size: 20px;
+ vertical-align: bottom;
 }
 
 #buttons {
-  position: relative;
-  display: block;
-  padding-top: 5px;
-  padding-bottom: 5px;
+ position: relative;
+ display: block;
+ padding-top: 5px;
+ padding-bottom: 5px;
+ width: 100%;
+ padding-right: 21px;
 }
 
 #scroller {
-  background-image: url("../images/giftly.png");
-  background-repeat: repeat;
-  z-index: 999;
-  position: relative;
-  display: block;
+ background-image: url("../images/giftly.png");
+ background-repeat: repeat;
+ z-index: 999;
+ position: relative;
+ display: block;
+ /* width: 100%; */
 }
